--- a/RNP_T2_DEIVID_RIBEIRO.ipynb
+++ b/RNP_T2_DEIVID_RIBEIRO.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {
         "id": "eqBEOzz8g9k8"
       },
@@ -55,13 +55,34 @@
         "#\n",
         "# Sumário\n",
         "#   1. Preparação e organização do notebook\n",
-        "#   2. Geração e pré-processamento dos dados\n",
+        "#      1.1 Cabeçalho\n",
+        "#      1.2 Bibliotecas e configurações\n",
+        "#\n",
+        "#   2. Geração e preparação do dataset\n",
+        "#      2.1 Geração da série de Mackey-Glass\n",
+        "#      2.2 Normalização da série e divisão treino/teste\n",
+        "#      2.3 Criação das janelas de entrada\n",
+        "#\n",
         "#   3. Definição dos modelos\n",
+        "#      3.1 Modelo 1: MLP\n",
+        "#      3.2 Modelo 2: LSTM\n",
+        "#      3.3 Modelo 3: GRU\n",
+        "#\n",
         "#   4. Treinamento\n",
-        "#   5. Avaliação e métricas\n",
-        "#   6. Visualizações obrigatórias\n",
-        "#   7. Conclusões e exportação\n",
-        "# ─────────────────────────────────────────────────────────────────────────────"
+        "#      4.1 Função de treino\n",
+        "#      4.2 Treinamento dos modelos\n",
+        "#\n",
+        "#   5. Predição sequencial (rolling forecast)\n",
+        "#      5.1 Definição da função de rolling forecast\n",
+        "#      5.2 Aplicando a função de rolling forecast nos modelos\n",
+        "#\n",
+        "#   6. Métricas\n",
+        "#\n",
+        "#   7. Gráficos\n",
+        "#      7.1 Figuras individuais por modelo\n",
+        "#      7.2 Figuras comparativas dos modelos\n",
+        "#      7.3 Baixar imagens\n",
+        "# ─────────────────────────────────────────────────────────────────────────────\n"
       ]
     },
     {
@@ -167,7 +188,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 553
+          "height": 985
         },
         "id": "neobrwjyhmj9",
         "outputId": "39cd0738-e8cf-4817-dbea-72a6243b1f81"
@@ -1416,7 +1437,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 143
+          "height": 144
         },
         "id": "QIARsIT-pXu-",
         "outputId": "e3d8a19f-eb89-475a-9fbf-a18c04cc9443"
@@ -2258,7 +2279,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
         "id": "FQvvs3WWwIA6",
         "outputId": "5d236851-ce20-4255-daa9-5eebae0782c7"
